--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ temp-write-test-*
 /wp-content/updraft/
 /wp-content/blogs.dir/
 /wp-content/wp-rocket-config
+
 /wp-content/upgrade/
 /wp-content/languages/
 /wp-content/advanced-cache.php
@@ -75,8 +76,8 @@ wp-content/mysql.sql
 /wp-admin
 /wp-includes
 
-/local-adminer-S1SqcMFJb.php
-/local-phpinfo.php
+!/local-adminer-S1SqcMFJb.php
+!/local-phpinfo.php
 
 /wp-content/index.php
 /wp-content/config.codekit3
@@ -99,7 +100,10 @@ wp-content/mysql.sql
 /wp-content/themes/ultralatch-ecommerce-theme/.babelrc/
 /wp-content/themes/ultralatch-ecommerce-theme/.bowerrc/
 /wp-content/themes/ultralatch-ecommerce-theme/dist/
-/wp-content/themes/ultralatch-ecommerce-theme/package-lock.json
+!/wp-content/themes/ultralatch-ecommerce-theme/package-lock.json
+!/wp-content/themes/ultralatch-ecommerce-theme/test.php
+!/wp-content/themes/ultralatch-ecommerce-theme/test2.php
+
 
 
 # large/disallowed file types
