--- a/.gitignore
+++ b/.gitignore
@@ -95,10 +95,10 @@ wp-content/mysql.sql
 /wp-content/themes/wordpress-blank/
 /wp-content/themes/storefront/
 
+**/node_modules
 
-/wp-content/themes/ultralatch-ecommerce-theme/node_modules/
 /wp-content/themes/ultralatch-ecommerce-theme/.babelrc/
-/wp-content/themes/ultralatch-ecommerce-theme/.bowerrc/
+/wp-content/themes/ultralatch-ecommerce-theme/bower.json
 /wp-content/themes/ultralatch-ecommerce-theme/dist/
 /wp-content/themes/ultralatch-ecommerce-theme/package-lock.json
 /wp-content/themes/ultralatch-ecommerce-theme/test.php
