Ignore backup package.json files

--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,8 @@ wp-content/mysql.sql
 /wp-content/themes/ultralatch-ecommerce-theme/package-lock.json
 /wp-content/themes/ultralatch-ecommerce-theme/test.php
 /wp-content/themes/ultralatch-ecommerce-theme/test2.php
+/wp-content/themes/ultralatch-ecommerce-theme/package-lock.bkup.json
+/wp-content/themes/ultralatch-ecommerce-theme/package.bkup.json
 
 
 
