--- a/wp-content/themes/ultralatch-ecommerce-theme/package.json
+++ b/wp-content/themes/ultralatch-ecommerce-theme/package.json
@@ -1,74 +1,45 @@
 {
-  "name": "ultralatch-ecommerce-theme",
-  "version": "1.0.0",
-  "description": "Starter theme, built with [Sage](https://roots.io/sage/) 8.5.1 by the development team at [Ainsley & Co.](https://ainsleyagency.com)",
-  "main": "index.js",
-  "directories": {
-    "lib": "lib"
-  },
+  "name": "sapphire-wp",
+  "version": "1.2.0",
+  "description": "=== Sapphire WP === Contributors: bitpub, nicolaegabriel Tags: one-column, two-columns, three-columns, four-columns, left-sidebar, right-sidebar, flexible-width, custom-background, custom-colors, custom-header, custom-menu, featured-image-header, featured-images, full-width-template, theme-options, threaded-comments, translation-ready Requires at least: 3.9 Tested up to: 3.9.1 Stable tag: 1.0",
+  "main": "./layout/scripts/scripts.js",
   "scripts": {
-    "dev": "webpack --mode development --watch",
-    "watch": "webpack --mode development --watch",
-    "build": "webpack --mode production"
+    "dev": "npm run development",
+    "development": "npx mix",
+    "watch": "npx mix watch",
+    "prod": "npm run production",
+    "production": "npx mix -p"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shrinkray/ultralatch-ecommerce.git"
+    "url": "git+https://github.com/shrinkray/Sapphire-WP-Theme.git"
   },
-  "keywords": [],
-  "author": "Greg Miller",
-  "license": "ISC",
+  "author": "shrinkray",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shrinkray/ultralatch-ecommerce/issues"
+    "url": "https://github.com/shrinkray/Sapphire-WP-Theme/issues"
   },
-  "homepage": "https://github.com/shrinkray/ultralatch-ecommerce#readme",
+  "homepage": "https://github.com/shrinkray/Sapphire-WP-Theme#readme",
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@fortawesome/fontawesome-free": "^5.14.0",
-    "FontAwesome-webpack": "0.0.2",
-    "autoprefixer": "^9.8.6",
-    "babel-loader": "^8.1.0",
+    "browser-sync": "^2.26.10",
+    "browser-sync-webpack-plugin": "^2.0.1",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.1.0",
-    "css-loader": "^3.6.0",
-    "exports-loader": "^0.7.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^4.3.0",
-    "font-awesome": "^4.7.0",
-    "i": "^0.3.6",
-    "imagemin-gifsicle": "^6.0.1",
-    "imagemin-jpegtran": "^6.0.0",
-    "imagemin-mozjpeg": "^8.0.0",
-    "imagemin-optipng": "^7.1.0",
-    "imagemin-pngquant": "^8.0.0",
-    "imagemin-svgo": "^7.1.0",
-    "imagemin-webpack": "^4.1.0",
-    "imagemin-webpack-plugin": "^2.4.2",
-    "mini-css-extract-plugin": "^0.7.0",
-    "node-sass": "^4.14.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "postcss": "^7.0.32",
-    "postcss-cli": "^7.1.2",
-    "postcss-loader": "^3.0.0",
+    "cross-env": "^7.0.3",
+    "cssnano": "^4.1.10",
+    "cssnano-preset-advanced": "^4.0.7",
+    "cssnano-preset-default": "^4.0.7",
+    "laravel-mix": "^6.0.3",
+    "laravel-mix-postcss-config": "^1.4.0",
+    "postcss": "^8.2.1",
+    "postcss-cli": "^8.3.1",
+    "postcss-custom-properties": "^10.0.0",
     "postcss-preset-env": "^6.7.0",
+    "postcss-sorting": "^6.0.0",
+    "postcss-url": "^10.1.1",
+    "purify-css": "^1.2.5",
+    "resolve-url-loader": "^3.1.0",
     "sass": "^1.29.0",
-    "sass-loader": "^7.3.1",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "url-loader": "^2.3.0",
-    "webfonts-loader": "^4.4.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "sass-loader": "^8.0.2"
   },
-  "dependencies": {
-    "boostrap": "^2.0.0",
-    "bootstrap": "^4.5.2",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
-    "slick-carousel": "^1.8.1",
-    "tether": "^1.4.7",
-    "typeface-montserrat": "0.0.54"
-  }
+  "dependencies": {}
 }
