--- a/wp-content/themes/ultralatch-ecommerce-theme/package.json
+++ b/wp-content/themes/ultralatch-ecommerce-theme/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "sapphire-wp",
-  "version": "1.2.0",
-  "description": "=== Sapphire WP === Contributors: bitpub, nicolaegabriel Tags: one-column, two-columns, three-columns, four-columns, left-sidebar, right-sidebar, flexible-width, custom-background, custom-colors, custom-header, custom-menu, featured-image-header, featured-images, full-width-template, theme-options, threaded-comments, translation-ready Requires at least: 3.9 Tested up to: 3.9.1 Stable tag: 1.0",
-  "main": "./layout/scripts/scripts.js",
+  "name": "ultralatch-ecommerce-theme",
+  "version": "1.0.0",
+  "description": "Starter theme, built with [Sage](https://roots.io/sage/) 8.5.1",
+  "main": "./assets/scripts/main.js",
   "scripts": {
     "dev": "npm run development",
     "development": "npx mix",
@@ -12,34 +12,41 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shrinkray/Sapphire-WP-Theme.git"
+    "url": "git+https://github.com/shrinkray/ultralatch-ecommerce.git"
   },
   "author": "shrinkray",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shrinkray/Sapphire-WP-Theme/issues"
+    "url": "https://github.com/shrinkray/ultralatch-ecommerce/issues"
   },
-  "homepage": "https://github.com/shrinkray/Sapphire-WP-Theme#readme",
+  "homepage": "https://github.com/shrinkray/ultralatch-ecommerce#readme",
   "devDependencies": {
-    "browser-sync": "^2.26.10",
-    "browser-sync-webpack-plugin": "^2.0.1",
+    "browser-sync": "^2.26.13",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "cssnano": "^4.1.10",
-    "cssnano-preset-advanced": "^4.0.7",
-    "cssnano-preset-default": "^4.0.7",
-    "laravel-mix": "^6.0.3",
-    "laravel-mix-postcss-config": "^1.4.0",
-    "postcss": "^8.2.1",
+    "jquery": "^3.5.1",
+    "laravel-mix": "^6.0.10",
+    "laravel-mix-versionhash": "^2.0.0",
+    "mini-css-extract-plugin": "^1.3.4",
+    "node-sass": "^4.14.1",
+    "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
-    "postcss-custom-properties": "^10.0.0",
+    "postcss-custom-properties": "^11.0.0",
     "postcss-preset-env": "^6.7.0",
     "postcss-sorting": "^6.0.0",
     "postcss-url": "^10.1.1",
     "purify-css": "^1.2.5",
-    "resolve-url-loader": "^3.1.0",
-    "sass": "^1.29.0",
-    "sass-loader": "^8.0.2"
+    "resolve-url-loader": "^3.1.2",
+    "sass": "^1.32.4",
+    "sass-loader": "^8.0.2",
+    "swiper": "^6.4.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap-scss": "^4.5.3",
+    "popper.js": "^1.16.1",
+    "tether": "^1.4.7",
+    "typeface-montserrat": "^1.1.13"
+  }
 }
