--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,7 @@ wp-content/mysql.sql
 /wp-content/themes/ultralatch-ecommerce-theme/test2.php
 /wp-content/themes/ultralatch-ecommerce-theme/package-lock.bkup.json
 /wp-content/themes/ultralatch-ecommerce-theme/package.bkup.json
+/wp-content/themes/ultralatch-ecommerce-theme/dist-test/
 
 
 
