--- a/wp-content/themes/ultralatch-ecommerce-theme/package.json
+++ b/wp-content/themes/ultralatch-ecommerce-theme/package.json
@@ -1,36 +1,35 @@
 {
   "name": "ultralatch-ecommerce-theme",
   "version": "1.0.0",
-  "description": "Starter theme, built with [Sage](https://roots.io/sage/) 8.5.1",
+  "description": "Starter theme, built with [Sage](https://roots.io/sage/) 8.5.1 by the development team at [Ainsley & Co.](https://ainsleyagency.com)",
   "main": "./assets/scripts/main.js",
-  "scripts": {
-    "dev": "npm run development",
-    "development": "npx mix",
-    "watch": "npx mix watch",
-    "prod": "npm run production",
-    "production": "npx mix -p"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/shrinkray/ultralatch-ecommerce.git"
   },
-  "author": "shrinkray",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/shrinkray/ultralatch-ecommerce/issues"
+  "directories": {
+    "lib": "lib"
   },
-  "homepage": "https://github.com/shrinkray/ultralatch-ecommerce#readme",
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "bootstrap": "^4.6.0",
+    "core-js": "^2.6.12",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
+    "slick-carousel": "^1.8.1",
+    "tether": "^1.4.7",
+    "typeface-montserrat": "^1.1.13"
+  },
   "devDependencies": {
     "browser-sync": "^2.26.13",
     "browser-sync-webpack-plugin": "^2.3.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "cssnano": "^4.1.10",
-    "jquery": "^3.5.1",
+    "cssnano-preset-advanced": "^4.0.7",
+    "cssnano-preset-default": "^4.0.7",
     "laravel-mix": "^6.0.10",
-    "laravel-mix-versionhash": "^2.0.0",
-    "mini-css-extract-plugin": "^1.3.4",
-    "node-sass": "^4.14.1",
+    "laravel-mix-postcss-config": "^1.4.0",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
     "postcss-custom-properties": "^11.0.0",
@@ -39,14 +38,17 @@
     "postcss-url": "^10.1.1",
     "purify-css": "^1.2.5",
     "resolve-url-loader": "^3.1.2",
-    "sass": "^1.32.4",
-    "sass-loader": "^8.0.2",
-    "swiper": "^6.4.5"
+    "sass": "^1.32.5",
+    "sass-loader": "^8.0.2"
   },
-  "dependencies": {
-    "bootstrap-scss": "^4.5.3",
-    "popper.js": "^1.16.1",
-    "tether": "^1.4.7",
-    "typeface-montserrat": "^1.1.13"
-  }
+  "scripts": {
+    "dev": "npm run development",
+    "development": "npx mix",
+    "watch": "npx mix watch",
+    "prod": "npm run production",
+    "production": "npx mix -p"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
